cmake_minimum_required(VERSION 3.10)
project(result)

set(CMAKE_CXX_STANDARD 14)

add_executable(result
        miniRT
        miniRT/includes/aabb.h
        miniRT/includes/actions.h
        miniRT/includes/bitmap.h
        miniRT/includes/camera.h
        miniRT/includes/colors.h
        miniRT/includes/cylinder.h
        miniRT/includes/error.h
        miniRT/includes/eventscode.h
        miniRT/includes/font_color.h
        miniRT/includes/general.h
        miniRT/includes/key_macos.h
        miniRT/includes/keys_linux.h
        miniRT/includes/macos_codes.h
        miniRT/includes/matrix.h
        miniRT/includes/minirt.h
        miniRT/includes/omnilight.h
        miniRT/includes/parsing.h
        miniRT/includes/plane.h
        miniRT/includes/raytrace.h
        miniRT/includes/rotation.h
        miniRT/includes/scene.h
        miniRT/includes/sphere.h
        miniRT/includes/spheric.h
        miniRT/includes/square.h
        miniRT/includes/triangle.h
        miniRT/includes/update.h
        miniRT/includes/vector.h
        miniRT/srcs/aabb.c
        miniRT/srcs/bitmap.c
        miniRT/srcs/camera.c
        miniRT/srcs/cylinder.c
        miniRT/srcs/destroy.c
        miniRT/srcs/endian.c
        miniRT/srcs/error.c
        miniRT/srcs/exit.c
        miniRT/srcs/get_hit_data.c
        miniRT/srcs/graphic.c
        miniRT/srcs/handle_line.c
        miniRT/srcs/illumination.c
        miniRT/srcs/image.c
        miniRT/srcs/init.c
        miniRT/srcs/keyboard_actions.c
        miniRT/srcs/light_casting.c
        miniRT/srcs/loop_intersect.c
        miniRT/srcs/matrix.c
        miniRT/srcs/matrix_gen.c
        miniRT/srcs/matrix_inversion.c
        miniRT/srcs/minirt.c
        miniRT/srcs/minitools.c
        miniRT/srcs/move.c
        miniRT/srcs/move2.c
        miniRT/srcs/observer.c
        miniRT/srcs/omnilight.c
        miniRT/srcs/parse_utils.c
        miniRT/srcs/parse_utils2.c
        miniRT/srcs/parse_utils3.c
        miniRT/srcs/parsing.c
        miniRT/srcs/plane.c
        miniRT/srcs/rayaabb.c
        miniRT/srcs/rayplane.c
        miniRT/srcs/raytrace.c
        miniRT/srcs/raytrace2.c
        miniRT/srcs/raytrace_savebmp.c
        miniRT/srcs/rayvolume.c
        miniRT/srcs/rt_buffer.c
        miniRT/srcs/scene_move.c
        miniRT/srcs/scene_move2.c
        miniRT/srcs/scene_rotation.c
        miniRT/srcs/scene_rotation2.c
        miniRT/srcs/scene_rotation3.c
        miniRT/srcs/scene_rotation4.c
        miniRT/srcs/scene_setup.c
        miniRT/srcs/set_obj2.c
        miniRT/srcs/set_objs.c
        miniRT/srcs/sphere.c
        miniRT/srcs/square.c
        miniRT/srcs/square2.c
        miniRT/srcs/triangle.c
        miniRT/srcs/turn.c
        miniRT/srcs/turn2.c
        miniRT/srcs/update.c
        miniRT/srcs/vect_product.c
        miniRT/srcs/vect_projection.c
        miniRT/srcs/vector.c
        )
